nuclear hunter seeker

--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -38,6 +38,126 @@ SuperWeapons=ArsenalMedicSpawn
 4999=DeliverySpecial
 5000=DeliverySpecial2
 5999=ActivateLaser
+6999=NuclearSeekerSpecial
+
+[NuclearSeekerSpecial]
+Name=Hunter-Seeker
+Type=HunterSeeker
+Range=0
+Action=Custom
+UIName=ISS_DiverSeeker
+EVA.Ready=EVA_BattlePowerReady
+IsPowered=true
+ShowTimer=yes
+SidebarPCX=divricon.pcx
+Text.Ready=NAME:DEPLOY
+SW.MaxCount=50
+Money.Amount=0
+RechargeTime=0.1
+LineMultiplier=0
+SW.AITargeting=none
+HunterSeeker.Type=NUKE_S
+SW.ActivationSound=ExplorerMoveStart2
+SW.CreateRadarEvent=no
+DisableableFromShell=no
+FlashSidebarTabFrames=0
+HunterSeeker.Buildings=GAPOWR
+HunterSeeker.RandomOnly=no
+SW.AlwaysGranted=yes
+
+[VoxelAnims]
+57132=FSPIKES
+[FSPIKES]
+Image=MOLES
+Name=Spikes
+Elasticity=0.0
+MinAngularVelocity=9.0
+MaxAngularVelocity=15.0
+MinZVel=30.0
+MaxZVel=55.0
+MaxXYVel=16.0
+Duration=100
+ExpireAnim=MININUKE
+Damage=140
+DamageRadius=5
+Warhead=CyborgGrenadeWH
+[VehicleTypes]
+65942=NUKE_S
+[NUKE_S]
+Image=DIVER
+UIName=Name:HunterSeekerB
+Name=Diver Seeker
+Category=AFV
+Prerequisite=GAWEAP,GASCPF
+Primary=SeekerFake
+DeathWeapon=NukePayload
+Explodes=yes
+IdleRate=4
+WalkRate=4 
+Strength=250
+Armor=special
+TechLevel=11
+Turret=no
+IsTilter=no
+CrateGoodie=no
+HunterSeeker=yes
+MinDebris=20
+MaxDebris=20
+DebrisTypes=FSPIKES
+DebrisMaximums=20
+Explosion=NUKEANIM
+Sight=5
+Sensors=yes
+SensorsSight=4
+Speed=28
+Owner=
+Cost=800
+Selectable=no
+Insignificant=yes
+Soylent=400
+Bounty.Value=200
+Bounty=yes
+Bounty.Display=yes
+Points=50
+ROT=8
+AllowedToStartInMultiplayer=no
+Crusher=no
+ProtectedDriver=yes
+VehicleThief.Allowed=no
+IronCurtain.Modifier=0
+Chronoshift.Allow=no
+CanRetaliate=no
+Bunkerable=no
+Crewed=no
+FlightLevel=400
+OmniCrushResistant=yes
+ImmuneToPsionicWeapons=yes
+IsSelectableCombatant=yes
+VoiceSelect=RobotTankSelect
+VoiceSelectDeactivated=RobotTankSelectDeactivated
+VoiceMove=RobotTankMove
+VoiceAttack=RobotTankAttackCommand
+VoiceFeedback=
+DieSound=GenVehicleDie
+MoveSound=ExplorerMoveStart
+Locomotor={4A582746-9839-11d1-B709-00A024DDAFD1}
+MovementZone=Fly
+ThreatPosed=0
+Weight=.5
+Trainable=no
+Accelerates=false
+Size=13
+TooBigToFitUnderBridge=true
+Insignia.Veteran=dummy
+Insignia.Elite=dummy
+PixelSelectionBracketDelta=9999
+IgnoresFirestorm=yes
+ImmuneToAbduction=yes
+CanBeReversed=no
+PipScale=none
+NoManualUnload=yes
+NoManualEnter=yes
+
 
 
 [DeliverySpecial]
@@ -61,10 +181,12 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=TESLA,TESLA,TESLA
+Deliver.Types=GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
+
+
 [ElectricAssault]
 Versus.steel=100%
 [DeliverySpecial2]
@@ -87,7 +209,7 @@ SW.Animation=CHRONOTG
 SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
-SW.AITargeting=none
+SW.AITargeting=base
 Deliver.Types=ZEP
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
@@ -121,12 +243,6 @@ SpySat=yes
 Power=233333
 Radar=yes
 
-[CADEFN]
-Overpowerable=true
-Primary=ScavengerLaser
-ElitePrimary=ScavengerLaserE
-Secondary=AvengerLaser
-EliteSecondary=AvengerLaserE
 
 [WeaponTypes]
 40192=AvengerLaser
@@ -134,12 +250,15 @@ EliteSecondary=AvengerLaserE
 [Warheads]
 34311=AvengerWH
 
-[ZEP]
-Armor=special
-
 [TESLA]
-Primary=none
-ElitePrimary=none
+
+Secondary=AvengerLaser
+EliteSecondary=AvengerLaserE
+
+
+
+[ZEP]
+
 
 [OPCoilBolt]
 ROF=20
@@ -179,13 +298,24 @@ LaserOuterColor=200,0,0
 [PatriotWH]
 Versus.special=5%
 
+[CADEFN]
+Overpowerable=true
+Primary=ScavengerLaser
+ElitePrimary=ScavengerLaserE
+Secondary=SentinelAA
+EliteSecondary=SentinelAA
+IsBaseDefense=yes
+Powered=yes
+HasRadialIndicator=true
+Turret=no
+LandTargeting=0
+
 [AvengerWH]
 Wall=no
-Verses=0%,0%,0%,0%,0%,0%,0%,0%,0%,0%,0%
+Verses=125%,115%,105%,100%,120%,110%,0%,0%,0%,100%,100%
 Versus.s_siren2=-120%
 AnimList=XGRYSML1,XGRYSML2,EXPLOSML,XGRYMED1,XGRYMED2,EXPLOMED,EXPLOLRG,TWLT070
 CLDisableGreen=yes
 CLDisableBlue=yes
 InfDeath=4
-Versus.special=100%
 ;END OF FILE
