--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -35,9 +35,9 @@ Spyable=yes
 SuperWeapons=ArsenalMedicSpawn
 
 [SuperWeaponTypes]
-4999=DeliverySpecial
-5000=DeliverySpecial2
-5999=ActivateLaser
+;4999=DeliverySpecial
+;5000=DeliverySpecial2
+;5999=ActivateLaser
 6999=NuclearSeekerSpecial
 
 [NuclearSeekerSpecial]
@@ -55,13 +55,13 @@ SW.MaxCount=50
 Money.Amount=0
 RechargeTime=0.1
 LineMultiplier=0
-SW.AITargeting=none
+SW.AITargeting=HunterSeeker
 HunterSeeker.Type=NUKE_S
 SW.ActivationSound=ExplorerMoveStart2
 SW.CreateRadarEvent=no
 DisableableFromShell=no
 FlashSidebarTabFrames=0
-HunterSeeker.Buildings=GAPOWR
+HunterSeeker.Buildings=GAPOWR,YAPOWR,NAPOWR,FATRAP
 HunterSeeker.RandomOnly=no
 SW.AlwaysGranted=yes
 
