Test Mode updated
Re Enable delivery for test mode

--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -35,10 +35,39 @@ Spyable=yes
 SuperWeapons=ArsenalMedicSpawn
 
 [SuperWeaponTypes]
-;4999=DeliverySpecial
-;5000=DeliverySpecial2
-;5999=ActivateLaser
+4999=DeliverySpecial
+5000=DeliverySpecial2
+5999=ActivateLaser
 6999=NuclearSeekerSpecial
+
+
+[DeliverySpecial]
+UIName=Name:CHMIN
+Name=Unit Deliver
+IsPowered=no
+RechargeTime=0.01
+Type=UnitDelivery
+Action=Custom
+SidebarPCX=wminicon.pcx
+ShowTimer=no
+DisableableFromShell=no
+Range=1.5
+LineMultiplier=0
+Cursor=WarpIn
+NoCursor=NoWarpIn
+EVA.Ready=EVA_ReinforcementsReady
+SW.RequiresTarget=none
+SW.Animation=CHRONOTG
+SW.AnimationHeight=1
+SW.Sound=ChronosphereMoveQuiet
+SW.FireIntoShroud=no
+SW.AITargeting=none
+Deliver.Types=GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
+SW.CreateRadarEvent=no
+FlashSidebarTabFrames=0
+SW.AlwaysGranted=yes
+
+
 
 [NuclearSeekerSpecial]
 Name=Hunter-Seeker
@@ -159,32 +188,6 @@ NoManualUnload=yes
 NoManualEnter=yes
 
 
-
-[DeliverySpecial]
-UIName=Name:CHMIN
-Name=Unit Deliver
-IsPowered=no
-RechargeTime=0.01
-Type=UnitDelivery
-Action=Custom
-SidebarPCX=wminicon.pcx
-ShowTimer=no
-DisableableFromShell=no
-Range=1.5
-LineMultiplier=0
-Cursor=WarpIn
-NoCursor=NoWarpIn
-EVA.Ready=EVA_ReinforcementsReady
-SW.RequiresTarget=none
-SW.Animation=CHRONOTG
-SW.AnimationHeight=1
-SW.Sound=ChronosphereMoveQuiet
-SW.FireIntoShroud=no
-SW.AITargeting=none
-Deliver.Types=GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
-SW.CreateRadarEvent=no
-FlashSidebarTabFrames=0
-SW.AlwaysGranted=yes
 
 
 [ElectricAssault]
