--- a/.gitignore
+++ b/.gitignore
@@ -1856,3 +1856,220 @@ Saved Games/AINSOMNIA.sav
 *.SAV
 Map Editor/finalalert2log.txt
 stringtable19.csf
+Help/content/pics/fms1.jpg
+Help/content/pics/fmbar.jpg
+Help/content/pics/CELLT.JPG
+Help/content/pics/bar3.jpg
+Help/content/pics/BAR2.JPG
+Help/content/pics/BAR.JPG
+Help/content/pics/aitrig.JPG
+Help/content/TRIGGERS.HTM
+Help/content/TTEAM.HTM
+Help/content/tutbridge.htm
+Help/content/TUTCONV.HTM
+Help/content/tutfm.HTM
+Help/content/TUTLIGHT.HTM
+Help/content/TUTMP.HTM
+Help/content/tutpatrol.HTM
+Help/content/TUTSIZE.HTM
+Help/content/TUTSP.HTM
+Help/content/TUTT.HTM
+Help/content/TUTTRIG1.HTM
+Help/content/TUTTRIG2.HTM
+Help/content/TUTTRIG3.HTM
+Help/content/TUTTRIG4.HTM
+Help/content/TUTTRIG5.HTM
+Help/content/TUTTUN.HTM
+Help/content/TUTWAYP1.HTM
+Help/content/userinterface.htm
+Help/content/whatsthis.htm
+Help/index.htm
+Help/content/SUNEDIT.HTM
+Help/content/requirements.htm
+Help/content/pics/WAYP.JPG
+Help/content/pics/ui2.jpg
+Help/content/pics/tutorial1_9.jpg
+Help/content/pics/tutorial1_8.jpg
+Help/content/pics/tutorial1_7.jpg
+Help/content/pics/tutorial1_6.jpg
+Help/content/pics/tutorial1_5.jpg
+Help/content/pics/tutorial1_4.jpg
+Help/content/pics/tutorial1_3.jpg
+Help/content/pics/tutorial1_2.jpg
+Help/content/pics/tutorial1_11.jpg
+Help/content/pics/tutorial1_10.jpg
+Help/content/pics/tutorial1_1.jpg
+Help/content/pics/tutorial1_0.jpg
+Help/content/pics/TUN2.JPG
+Help/content/pics/TUN1.JPG
+Help/content/pics/TRIGGERS.JPG
+Help/content/pics/rtt.JPG
+Help/content/pics/fms5.jpg
+Help/content/pics/fms4.jpg
+Help/content/pics/fms3.jpg
+Help/content/pics/fms2.jpg
+Help/content/maptutorial.htm
+Help/content/MAIN.HTM
+Help/content/LICENSE.HTM
+Help/content/LEFT.HTM
+Help/content/fscript.HTM
+Help/content/FORMATS.CSS
+Help/content/FAQ.HTM
+Help/content/EDITT.HTM
+Help/content/EDITO.HTM
+Help/content/aitrig.HTM
+必须先注册.exe
+简体中文语言包.exe
+繁体中文语言包.exe
+英语语言包.exe
+win7菜单修正.exe
+Taunts/tauyu08.wav
+Taunts/tauyu07.wav
+Taunts/tauyu06.wav
+Taunts/tauyu05.wav
+Taunts/tauyu04.wav
+Taunts/tauyu03.wav
+Taunts/tauyu02.wav
+Taunts/tauyu01.wav
+Taunts/tauru08.wav
+Taunts/tauru07.wav
+Taunts/tauru06.wav
+Taunts/tauru05.wav
+Taunts/tauru04.wav
+Taunts/tauru03.wav
+Taunts/tauru02.wav
+Taunts/tauru01.wav
+Taunts/tauli08.wav
+Taunts/tauli07.wav
+Taunts/tauli06.wav
+Taunts/tauli05.wav
+Taunts/tauli04.wav
+Taunts/tauli03.wav
+Taunts/tauli02.wav
+Taunts/tauli01.wav
+Taunts/tauko08.wav
+Taunts/tauko07.wav
+Taunts/tauko06.wav
+Taunts/tauko05.wav
+Taunts/tauko04.wav
+Taunts/tauko03.wav
+Taunts/tauko02.wav
+Taunts/tauko01.wav
+Taunts/tauir08.wav
+Taunts/tauir07.wav
+Taunts/tauir06.wav
+Taunts/tauir05.wav
+Taunts/tauir04.wav
+Taunts/tauir03.wav
+Taunts/tauir02.wav
+Taunts/tauir01.wav
+Taunts/tauge08.wav
+Taunts/tauge07.wav
+Taunts/tauge06.wav
+Taunts/tauge05.wav
+Taunts/tauge04.wav
+Taunts/tauge03.wav
+Taunts/tauge02.wav
+Taunts/tauge01.wav
+Taunts/taufr08.wav
+Taunts/taufr07.wav
+Taunts/taufr06.wav
+Taunts/taufr05.wav
+Taunts/taufr04.wav
+Taunts/taufr03.wav
+Taunts/taufr02.wav
+Taunts/taufr01.wav
+Taunts/taucu08.wav
+Taunts/taucu07.wav
+Taunts/taucu06.wav
+Taunts/taucu05.wav
+Taunts/taucu04.wav
+Taunts/taucu03.wav
+Taunts/taucu02.wav
+Taunts/taucu01.wav
+Taunts/taubr08.wav
+Taunts/taubr07.wav
+Taunts/taubr06.wav
+Taunts/taubr05.wav
+Taunts/taubr04.wav
+Taunts/taubr03.wav
+Taunts/taubr02.wav
+Taunts/taubr01.wav
+Taunts/tauam08.wav
+Taunts/tauam07.wav
+Taunts/tauam06.wav
+Taunts/tauam05.wav
+Taunts/tauam04.wav
+Taunts/tauam03.wav
+Taunts/tauam02.wav
+Taunts/tauam01.wav
+*.mmp
+FinalAlert2YR.exe
+finalalert2log.txt
+FinalAlert2.exe.HH
+FinalAlert.ini
+FALanguage.ini
+FAData.ini
+GAME.com
+game.fnt
+Game.pif
+Game.yrm
+GROZA.NFO
+Transylv.yro
+Uharc.exe
+RA2.ico
+ra2.ini
+Ra2.lcf
+Ra2.tlb
+RA2MD Update.ico
+ra2md.csf
+Ra2md.exe
+RA2MD.ico
+RA2MD.INI
+ra2md.lcf
+ra2md.reg
+RA2Tmp.csf
+Readme.doc
+Readme.txt
+StdMapRA2.ini
+*.yro
+Setup.bat
+SetupScript.ini
+smuninstall.exe
+PServer.exe
+Patchw32.dll
+patchgetmd.dat
+patchget.dat
+patch.doc
+notes.ico
+Maps/Custom/city in the middle.map
+invasion.mmx
+irunin.dat
+irunin.ini
+irunin.lng
+launcher.bmp
+launcher.txt
+launchermd.bmp
+EB1.mmx
+EB2.mmx
+EB3.mmx
+EB4.mmx
+EB5.mmx
+*.dll
+*.dat
+*.tlb
+*.idx
+*.mmx
+audio.bag
+*.exe
+*.dsk
+*.lcf
+Mfc42.dll.HH
+00000409.016
+00000409.256
+Woldata.key
+TIPS.ENG
+TIPS.DEU
+wolinfoMD.ini
+*.bak
+Map Editor/mmx_tmp.pkt
