created ini modules
updated Test Mode with survival tweak modules

--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -1,9 +1,3 @@
-; Mental Omega APYR 3.3 Mode Client INI
-; Game Mode = Standard
-; Just Universal Code
-
-; Universal Code
-
 [General]
 TeamRetaliate=no
 
@@ -34,15 +28,42 @@ Spyable=yes
 [GADEPO]
 SuperWeapons=ArsenalMedicSpawn
 
-[SuperWeaponTypes]
-4999=DeliverySpecial
-5000=DeliverySpecial2
-5999=ActivateLaser
-6999=NuclearSeekerSpecial
+[GACNST]
+SpySat=yes
+Power=233333
+Radar=yes
+Primary=MercuryCluster
+EMPulseCannon=yes
 
+[NACNST]
+SpySat=yes
+Power=233333
+Radar=yes
+Primary=MercuryCluster
+EMPulseCannon=yes
+
+[YACNST]
+SpySat=yes
+Power=233333
+Radar=yes
+Primary=MercuryCluster
+EMPulseCannon=yes
+
+[FACNST]
+SpySat=yes
+Power=233333
+Radar=yes
+Primary=MercuryCluster
+EMPulseCannon=yes
+
+[SuperWeaponTypes]
+10001=DeliverySpecial
+10002=DeliverySpecial2
+10003=ZephyrDeliverySpecial
+10004=HunterSeekerBuilding
 
 [DeliverySpecial]
-UIName=Name:CHMIN
+UIName=NOSTR:TEST DELIVERY
 Name=Unit Deliver
 IsPowered=no
 RechargeTime=0.01
@@ -62,144 +83,197 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
+Deliver.Types=GAMERC
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
 
+[WeaponTypes]
+10001=WeatherLauncher
+10002=MercuryCluster
 
+[Projectiles]
+10001=VerticalYN
+10002=WeatherProj2
+10003=MercuryClusterP
 
-[NuclearSeekerSpecial]
-Name=Hunter-Seeker
-Type=HunterSeeker
-Range=0
-Action=Custom
-UIName=ISS_DiverSeeker
-EVA.Ready=EVA_BattlePowerReady
-IsPowered=true
-ShowTimer=yes
-SidebarPCX=divricon.pcx
-Text.Ready=NAME:DEPLOY
-SW.MaxCount=50
-Money.Amount=0
+[Warheads]
+10001=WethYNWH
+10002=WethYNWH2
+
+[LightningRodSpecial]
 RechargeTime=0.1
-LineMultiplier=0
-SW.AITargeting=HunterSeeker
-HunterSeeker.Type=NUKE_S
-SW.ActivationSound=ExplorerMoveStart2
-SW.CreateRadarEvent=no
-DisableableFromShell=no
-FlashSidebarTabFrames=0
-HunterSeeker.Buildings=GAPOWR,YAPOWR,NAPOWR,FATRAP
-HunterSeeker.RandomOnly=no
 SW.AlwaysGranted=yes
+Money.Amount=0
+SW.AllowAI=no
 
-[VoxelAnims]
-57132=FSPIKES
-[FSPIKES]
-Image=MOLES
-Name=Spikes
-Elasticity=0.0
-MinAngularVelocity=9.0
-MaxAngularVelocity=15.0
-MinZVel=30.0
-MaxZVel=55.0
-MaxXYVel=16.0
-Duration=100
-ExpireAnim=MININUKE
-Damage=140
-DamageRadius=5
-Warhead=CyborgGrenadeWH
-[VehicleTypes]
-65942=NUKE_S
-[NUKE_S]
-Image=DIVER
-UIName=Name:HunterSeekerB
-Name=Diver Seeker
-Category=AFV
-Prerequisite=GAWEAP,GASCPF
-Primary=SeekerFake
-DeathWeapon=NukePayload
-Explodes=yes
-IdleRate=4
-WalkRate=4 
-Strength=250
-Armor=special
-TechLevel=11
-Turret=no
-IsTilter=no
-CrateGoodie=no
-HunterSeeker=yes
-MinDebris=20
-MaxDebris=20
-DebrisTypes=FSPIKES
-DebrisMaximums=20
-Explosion=NUKEANIM
-Sight=5
-Sensors=yes
-SensorsSight=4
-Speed=28
-Owner=
-Cost=800
-Selectable=no
-Insignificant=yes
-Soylent=400
-Bounty.Value=200
-Bounty=yes
-Bounty.Display=yes
-Points=50
-ROT=8
-AllowedToStartInMultiplayer=no
-Crusher=no
-ProtectedDriver=yes
-VehicleThief.Allowed=no
-IronCurtain.Modifier=0
-Chronoshift.Allow=no
-CanRetaliate=no
-Bunkerable=no
-Crewed=no
-FlightLevel=400
-OmniCrushResistant=yes
-ImmuneToPsionicWeapons=yes
-IsSelectableCombatant=yes
-VoiceSelect=RobotTankSelect
-VoiceSelectDeactivated=RobotTankSelectDeactivated
-VoiceMove=RobotTankMove
-VoiceAttack=RobotTankAttackCommand
-VoiceFeedback=
-DieSound=GenVehicleDie
-MoveSound=ExplorerMoveStart
-Locomotor={4A582746-9839-11d1-B709-00A024DDAFD1}
-MovementZone=Fly
-ThreatPosed=0
-Weight=.5
-Trainable=no
-Accelerates=false
-Size=13
-TooBigToFitUnderBridge=true
-Insignia.Veteran=dummy
-Insignia.Elite=dummy
-PixelSelectionBracketDelta=9999
-IgnoresFirestorm=yes
-ImmuneToAbduction=yes
-CanBeReversed=no
-PipScale=none
-NoManualUnload=yes
-NoManualEnter=yes
+[WeatherLauncher]
+Damage=1
+ROF=5
+Range=10
+Projectile=VerticalYN
+Speed=100
+OmniFire=yes
+Warhead=WethYNWH
+Report=WeatherIntro
+RevealOnFire=no
+Burst=1
 
+[VerticalYN]
+Acceleration=10000
+Airburst=yes
+AA=no
+AG=yes
+AirburstWeapon=WeatherWeapon
+Cluster=1
+AirburstSpread=0.001
+Arm=1
+ROT=100
+High=yes
+VeryHigh=yes
+Ranged=yes
 
+[WethYNWH]
+CellSpread=1.8
+PercentAtMax=.4
+Verses=98%,90%,80%,80%,60%,75%,15%,25%,10%,10%,10%
+InfDeath=5
+AnimList=WCCLOUD2,WCCLOUD1,WCCLOUD3
+AffectsAllies=no
 
+[WeatherWeapon]
+Damage=250
+ROF=1
+Range=1
+Projectile=WeatherProj2
+Speed=20
+Warhead=WethYNWH2
+Report=WeatherStrike
 
-[ElectricAssault]
-Versus.steel=100%
-[DeliverySpecial2]
-UIName=Name:CHMIN
+[WeatherProj2]
+Arm=15
+Ranged=yes
+Image=none
+AA=no
+ROT=1
+Acceleration=1
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+
+[WethYNWH2]
+InfDeath=5
+Verses=100%,100%,100%,100%,100%,100%,100%,80%,25%,100%,100%
+PreImpactAnim=WCLBOLT2
+AnimList=KTSTLEXP
+AffectsAllies=no
+Rocker=yes
+Conventional=yes
+CellSpread=2.6
+PercentAtMax=.45
+Versus.garrison_c=20%
+Versus.shipyard=150%
+Versus.concrete_b=15%
+Bright=no
+CombatLightSize=40%
+DamageAirThreshold=-1
+
+[GAROD]
+Primary=WeatherLauncher
+DistributedWeaponFire=yes
+AttackFriendlies=no
+NoManualFire=no
+
+[MercurySpecial]
+RechargeTime=0.1
+Range=5
+SW.AlwaysGranted=yes
+Money.Amount=0
+SW.AllowAI=no
+EMPulse.Cannons=GAMERC,GACNST,NACNST,YACNST,FACNST
+
+[MercuryCluster]
+Damage=1
+ROF=300
+Range=512
+Speed=100
+Projectile=MercuryClusterP
+Warhead=DummyWH
+RevealOnFire=no
+
+[MercuryClusterP]
+Inviso=yes
+Image=none
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+Splits=yes
+AirburstWeapon=MercuryOverdrive
+Cluster=25
+AirburstSpread=3
+
+[GAMERC]
+Primary=MercuryCluster
+
+[ForceShieldSpecial]
+RechargeTime=0.1
+SW.Range=10,10
+Range=10
+SW.AlwaysGranted=yes
+SW.AllowAI=no
+
+[ZephyrBeaconSpecial]
+RechargeTime=0.1
+SW.AlwaysGranted=yes
+Money.Amount=0
+SW.AllowAI=no
+
+[HowitzerBeacon]
+ROF=20
+
+[HowitzerBeaconE]
+ROF=20
+
+[HowitzerProjInacc]
+Proximity=no
+AA=no
+AG=yes
+Image=HOWPROJ
+Inaccurate=yes
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+Arcing=yes
+High=yes
+Cluster=3
+Acceleration=30
+BallisticScatter.Min=0.5
+BallisticScatter.Max=5.0
+
+[HowitzerProjInaccE]
+Proximity=no
+AA=no
+AG=yes
+Image=HOWPROJE
+Inaccurate=yes
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+Arcing=yes
+High=yes
+Cluster=3
+Acceleration=30
+BallisticScatter.Min=0.5
+BallisticScatter.Max=5.0
+
+[ZephyrDeliverySpecial]
+UIName=NOSTR:Zephyr Delivery
 Name=Unit Deliver
 IsPowered=no
-RechargeTime=0.1
+RechargeTime=0.01
 Type=UnitDelivery
 Action=Custom
-SidebarPCX=wminicon.pcx
+SidebarPCX=zephicon.pcx
 ShowTimer=no
 DisableableFromShell=no
 Range=1.5
@@ -212,113 +286,85 @@ SW.Animation=CHRONOTG
 SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
-SW.AITargeting=base
-Deliver.Types=ZEP
+SW.AITargeting=none
+Deliver.Types=HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
 
-[ActivateLaser]
-UIName=NOSTR:Laser
-Name=Psychic Flash
-IsPowered=true
-RechargeTime=0.5
-Type=Battery
+[HunterSeekerSpecial]
+RechargeTime=0.1
+SW.MaxCount=20
+HunterSeeker.Buildings=GAWEAP,GAWEAPB,GAPOWR
+SW.AlwaysGranted=yes
+Money.Amount=0
+SW.AllowAI=no
+
+[SUNB]
+Passengers.Allowed=GGI
+Survivor.RookiePassengerChance=0%
+Survivor.VeteranPassengerChance=0%
+Survivor.ElitePassengerChance=0%
+Passengers=5
+InitialPayload.Types=BLZZ
+InitialPayload.Nums=5
+
+[HunterSeekerBuilding]
+UIName=NOSTR:Hunter Seeker Supply
+Name=Unit Deliver
+IsPowered=no
+RechargeTime=0.01
+Type=UnitDelivery
 Action=Custom
-SidebarPCX=pblzicon.pcx
+SidebarPCX=powricon.pcx
 ShowTimer=no
 DisableableFromShell=no
-Text.Charging=NOSTR:CHARGING
-Text.Active=NOSTR:ACTIVATED
-Text.Ready=NAME:ACTIVATE
-EVA.Ready=EVA_BattlePowerReady
-UseChargeDrain=true
-SW.ChargeToDrainRatio=1
-SW.Unstoppable=no
+Range=1.5
+LineMultiplier=0
+Cursor=WarpIn
+NoCursor=NoWarpIn
+EVA.Ready=EVA_ReinforcementsReady
+SW.RequiresTarget=none
+SW.Animation=CHRONOTG
+SW.AnimationHeight=1
+SW.Sound=ChronosphereMoveQuiet
+SW.FireIntoShroud=no
+SW.AITargeting=none
+Deliver.Types=GAWEAP,GAWEAP,GAWEAP,GAWEAP,GAWEAP,GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
 SW.CreateRadarEvent=no
-SW.AITargeting=None
-Battery.Overpower=TESLA
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
 
-[GACNST]
-SpySat=yes
-Power=233333
-Radar=yes
+[TargetPainterSpecial]
+Range=8
+RechargeTime=0.1
+SW.AlwaysGranted=yes
+Money.Amount=0
+SW.AllowAI=no
 
+[TargetPainterWH]
+CellSpread=8
+Versus.f_light=1%
+Versus.f_shad=1%
+Versus.f_seizer=1%
+Versus.f_jet=1%
+Versus.f_medium=1%
+Versus.f_gotter=1%
+Versus.f_heavy=1%
+Versus.f_dybb=1%
+Versus.f_spawn=1%
+Versus.f_shrike=1%
+Versus.f_widow=1%
+Versus.f_thor=1%
+Versus.f_quetz=1%
+Versus.f_harb=1%
+Versus.f_cryoc=1%
+Versus.f_hurr=1%
+Versus.f_diver=1%
+Versus.f_mothra=1%
+Versus.f_rock=1%
+Versus.f_hero=1%
+AttachEffect.Animation=TARGETPAINT
+AttachEffect.Duration=900
+AttachEffect.ArmorMultiplier=0.5
 
-[WeaponTypes]
-40192=AvengerLaser
-40193=AvengerLaserE
-[Warheads]
-34311=AvengerWH
-
-[TESLA]
-
-Secondary=AvengerLaser
-EliteSecondary=AvengerLaserE
-
-
-
-[ZEP]
-
-
-[OPCoilBolt]
-ROF=20
-Range=80
-
-[AvengerLaser]
-Damage=300
-ROF=2
-Range=120
-Projectile=InvisibleAll
-Speed=100
-Warhead=AvengerWH
-Anim=LASMUZ
-IsLaser=true
-Bright=yes
-LaserOuterSpread=0,0,0
-LaserDuration=80
-Burst=2
-LaserInnerColor=200,0,0
-LaserOuterColor=200,0,0
-
-[AvengerLaserE]
-Damage=300
-ROF=2
-Range=120
-Projectile=InvisibleAll
-Speed=100
-Warhead=AvengerWH
-Anim=LASMUZ
-IsLaser=true
-Bright=true
-LaserOuterSpread=0,0,0
-LaserDuration=80
-Burst=2
-LaserInnerColor=200,0,0
-LaserOuterColor=200,0,0
-[PatriotWH]
-Versus.special=5%
-
-[CADEFN]
-Overpowerable=true
-Primary=ScavengerLaser
-ElitePrimary=ScavengerLaserE
-Secondary=SentinelAA
-EliteSecondary=SentinelAA
-IsBaseDefense=yes
-Powered=yes
-HasRadialIndicator=true
-Turret=no
-LandTargeting=0
-
-[AvengerWH]
-Wall=no
-Verses=125%,115%,105%,100%,120%,110%,0%,0%,0%,100%,100%
-Versus.s_siren2=-120%
-AnimList=XGRYSML1,XGRYSML2,EXPLOSML,XGRYMED1,XGRYMED2,EXPLOMED,EXPLOLRG,TWLT070
-CLDisableGreen=yes
-CLDisableBlue=yes
-InfDeath=4
-;END OF FILE
