More Module online
Backwarp change to cluster and 10 instances
Force shield has more range
Gear Change increasee production speed by 2 times
Other module has minimal changes

--- a/.gitignore
+++ b/.gitignore
@@ -2074,3 +2074,10 @@ wolinfoMD.ini
 *.bak
 Map Editor/mmx_tmp.pkt
 debug/snapshot-20201231-122241/except.txt
+debug/snapshot-20210103-034625/except.txt
+debug/snapshot-20210103-034857/except.txt
+debug/snapshot-20210103-035036/except.txt
+debug/snapshot-20210103-035209/except.txt
+debug/snapshot-20210104-083922/except.txt
+debug/snapshot-20210104-084025/except.txt
+Screenshots/SCRN.20210106-102314-00982.png
