--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -32,35 +32,26 @@ SuperWeapons=ArsenalMedicSpawn
 SpySat=yes
 Power=233333
 Radar=yes
-Primary=MercuryCluster
-EMPulseCannon=yes
 
 [NACNST]
 SpySat=yes
 Power=233333
 Radar=yes
-Primary=MercuryCluster
-EMPulseCannon=yes
 
 [YACNST]
 SpySat=yes
 Power=233333
 Radar=yes
-Primary=MercuryCluster
-EMPulseCannon=yes
 
 [FACNST]
 SpySat=yes
 Power=233333
 Radar=yes
-Primary=MercuryCluster
-EMPulseCannon=yes
 
 [SuperWeaponTypes]
 10001=DeliverySpecial
 10002=DeliverySpecial2
-10003=ZephyrDeliverySpecial
-10004=HunterSeekerBuilding
+10003=TenguDeliverySpecial
 
 [DeliverySpecial]
 UIName=NOSTR:TEST DELIVERY
@@ -69,7 +60,7 @@ IsPowered=no
 RechargeTime=0.01
 Type=UnitDelivery
 Action=Custom
-SidebarPCX=wminicon.pcx
+SidebarPCX=apocicon.pcx
 ShowTimer=no
 DisableableFromShell=no
 Range=1.5
@@ -83,197 +74,29 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=GAMERC
+Deliver.Types=NAWEAP,NAWEAP
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
 
-[WeaponTypes]
-10001=WeatherLauncher
-10002=MercuryCluster
+[MAMM]
+TechLevel=1
+Prerequisite=FACTORY
+Owner=Europeans,UnitedStates,Pacific,USSR,Latin,Chinese,PsiCorps,Headquaters,ScorpionCell,Guild1,Guild2,Guild3
 
-[Projectiles]
-10001=VerticalYN
-10002=WeatherProj2
-10003=MercuryClusterP
+[VehicleTypes]
+10001=TENGUS
+10002=TENGUF
+10003=MECHA_J
 
-[Warheads]
-10001=WethYNWH
-10002=WethYNWH2
-
-[LightningRodSpecial]
-RechargeTime=0.1
-SW.AlwaysGranted=yes
-Money.Amount=0
-SW.AllowAI=no
-
-[WeatherLauncher]
-Damage=1
-ROF=5
-Range=10
-Projectile=VerticalYN
-Speed=100
-OmniFire=yes
-Warhead=WethYNWH
-Report=WeatherIntro
-RevealOnFire=no
-Burst=1
-
-[VerticalYN]
-Acceleration=10000
-Airburst=yes
-AA=no
-AG=yes
-AirburstWeapon=WeatherWeapon
-Cluster=1
-AirburstSpread=0.001
-Arm=1
-ROT=100
-High=yes
-VeryHigh=yes
-Ranged=yes
-
-[WethYNWH]
-CellSpread=1.8
-PercentAtMax=.4
-Verses=98%,90%,80%,80%,60%,75%,15%,25%,10%,10%,10%
-InfDeath=5
-AnimList=WCCLOUD2,WCCLOUD1,WCCLOUD3
-AffectsAllies=no
-
-[WeatherWeapon]
-Damage=250
-ROF=1
-Range=1
-Projectile=WeatherProj2
-Speed=20
-Warhead=WethYNWH2
-Report=WeatherStrike
-
-[WeatherProj2]
-Arm=15
-Ranged=yes
-Image=none
-AA=no
-ROT=1
-Acceleration=1
-SubjectToCliffs=no
-SubjectToElevation=no
-SubjectToWalls=no
-
-[WethYNWH2]
-InfDeath=5
-Verses=100%,100%,100%,100%,100%,100%,100%,80%,25%,100%,100%
-PreImpactAnim=WCLBOLT2
-AnimList=KTSTLEXP
-AffectsAllies=no
-Rocker=yes
-Conventional=yes
-CellSpread=2.6
-PercentAtMax=.45
-Versus.garrison_c=20%
-Versus.shipyard=150%
-Versus.concrete_b=15%
-Bright=no
-CombatLightSize=40%
-DamageAirThreshold=-1
-
-[GAROD]
-Primary=WeatherLauncher
-DistributedWeaponFire=yes
-AttackFriendlies=no
-NoManualFire=no
-
-[MercurySpecial]
-RechargeTime=0.1
-Range=5
-SW.AlwaysGranted=yes
-Money.Amount=0
-SW.AllowAI=no
-EMPulse.Cannons=GAMERC,GACNST,NACNST,YACNST,FACNST
-
-[MercuryCluster]
-Damage=1
-ROF=300
-Range=512
-Speed=100
-Projectile=MercuryClusterP
-Warhead=DummyWH
-RevealOnFire=no
-
-[MercuryClusterP]
-Inviso=yes
-Image=none
-SubjectToCliffs=no
-SubjectToElevation=no
-SubjectToWalls=no
-Splits=yes
-AirburstWeapon=MercuryOverdrive
-Cluster=25
-AirburstSpread=3
-
-[GAMERC]
-Primary=MercuryCluster
-
-[ForceShieldSpecial]
-RechargeTime=0.1
-SW.Range=10,10
-Range=10
-SW.AlwaysGranted=yes
-SW.AllowAI=no
-
-[ZephyrBeaconSpecial]
-RechargeTime=0.1
-SW.AlwaysGranted=yes
-Money.Amount=0
-SW.AllowAI=no
-
-[HowitzerBeacon]
-ROF=20
-
-[HowitzerBeaconE]
-ROF=20
-
-[HowitzerProjInacc]
-Proximity=no
-AA=no
-AG=yes
-Image=HOWPROJ
-Inaccurate=yes
-SubjectToCliffs=no
-SubjectToElevation=no
-SubjectToWalls=no
-Arcing=yes
-High=yes
-Cluster=3
-Acceleration=30
-BallisticScatter.Min=0.5
-BallisticScatter.Max=5.0
-
-[HowitzerProjInaccE]
-Proximity=no
-AA=no
-AG=yes
-Image=HOWPROJE
-Inaccurate=yes
-SubjectToCliffs=no
-SubjectToElevation=no
-SubjectToWalls=no
-Arcing=yes
-High=yes
-Cluster=3
-Acceleration=30
-BallisticScatter.Min=0.5
-BallisticScatter.Max=5.0
-
-[ZephyrDeliverySpecial]
-UIName=NOSTR:Zephyr Delivery
+[TenguDeliverySpecial]
+UIName=NOSTR:TEST DELIVERY
 Name=Unit Deliver
 IsPowered=no
 RechargeTime=0.01
 Type=UnitDelivery
 Action=Custom
-SidebarPCX=zephicon.pcx
+SidebarPCX=apocicon.pcx
 ShowTimer=no
 DisableableFromShell=no
 Range=1.5
@@ -287,84 +110,201 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI,HOWI
+Deliver.Types=MECHA,MECHA_J
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
 
-[HunterSeekerSpecial]
-RechargeTime=0.1
-SW.MaxCount=20
-HunterSeeker.Buildings=GAWEAP,GAWEAPB,GAPOWR
-SW.AlwaysGranted=yes
-Money.Amount=0
-SW.AllowAI=no
+[MECHA]
+IsSimpleDeployer=yes
+Convert.Deploy=MECHA_J
+Cursor.Deploy=ModeII
 
-[SUNB]
-Passengers.Allowed=GGI
-Survivor.RookiePassengerChance=0%
-Survivor.VeteranPassengerChance=0%
-Survivor.ElitePassengerChance=0%
-Passengers=5
-InitialPayload.Types=BLZZ
-InitialPayload.Nums=5
+[MECHA_J]
+UIName=Name:MECHA
+Name=Tengu
+Image=MECHA
+Category=AirPower
+DeployFire=yes
+DeployToLand=yes
+JumpJet=yes
+IsSimpleDeployer=yes
+Convert.Deploy=MECHA
+Cursor.Deploy=ModeI
+Primary=NeutralizerCutter
+ElitePrimary=NeutralizerCutter
+Strength=125
+Fearless=yes
+Armor=medium
+TechLevel=11
+Sight=8
+Pip=white
+Speed=10
+AllowedToStartInMultiplayer=no
+Cost=0
+Soylent=225
+Bounty.Value=100
+Bounty=yes
+Bounty.Display=yes
+Points=15
+AirRangeBonus=1
+IsSelectableCombatant=yes
+VoiceSelect=
+VoiceMove=
+VoiceAttack=
+VoiceFeedback=
+VoiceSpecialAttack=
+CrashingSound=
+ImpactLandSound=
+Locomotor={92612C46-F71F-11d1-AC9F-006008055BB5}
+MovementZone=Fly
+SpeedType=Hover
+HoverAttack=yes
+BalloonHover=yes
+ConsideredAircraft=yes
+ThreatPosed=15
+PhysicalSize=1
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER,FASTER
+JumpjetSpeed=34
+JumpjetClimb=24
+JumpjetCrash=25
+JumpJetAccel=10
+JumpjetTurnRate=20
+JumpjetHeight=500
+JumpjetWobbles=.01
+JumpjetDeviation=1
+JumpjetNoWobbles=yes
+Size=1
+Crashable=no
+MoveSound=RocketeerMoveLoop
+PixelSelectionBracketDelta=-3
+CanBeReversed=no
+ImmuneToEMP=no
 
-[HunterSeekerBuilding]
-UIName=NOSTR:Hunter Seeker Supply
-Name=Unit Deliver
-IsPowered=no
-RechargeTime=0.01
-Type=UnitDelivery
-Action=Custom
-SidebarPCX=powricon.pcx
-ShowTimer=no
-DisableableFromShell=no
-Range=1.5
-LineMultiplier=0
-Cursor=WarpIn
-NoCursor=NoWarpIn
-EVA.Ready=EVA_ReinforcementsReady
-SW.RequiresTarget=none
-SW.Animation=CHRONOTG
-SW.AnimationHeight=1
-SW.Sound=ChronosphereMoveQuiet
-SW.FireIntoShroud=no
-SW.AITargeting=none
-Deliver.Types=GAWEAP,GAWEAP,GAWEAP,GAWEAP,GAWEAP,GAPOWR,GAPOWR,GAPOWR,GAPOWR,GAPOWR
-SW.CreateRadarEvent=no
-FlashSidebarTabFrames=0
-SW.AlwaysGranted=yes
+[TENGUS]
+UIName=Name:TENGUS
+Name=Mecha Tengu
+Image=MECHA
+Primary=NeutralizerCutter
+ElitePrimary=NeutralizerCutter
+Prerequisite=FAWEAP
+Owner=Europeans,UnitedStates,Pacific,USSR,Latin,Chinese,PsiCorps,Headquaters,ScorpionCell,Guild1,Guild2,Guild3
+Ammo=4
+PipWrap=4
+Reload=5
+ReloadAmount=4
+EmptyReload=100
+PipScale=none
+IsSimpleDeployer=yes
+Convert.Deploy=TENGUF
+Cursor.Deploy=ModeII
+Cost=700
+Soylent=350
+Bounty.Value=175
+Bounty=yes
+Bounty.Display=yes
+Speed=7
+MoveSound=RottweilerMoveStart
+Strength=400
+Category=AFV
+Armor=medium
+Crewed=no
+Turret=yes
+IsTilter=yes
+Crusher=yes
+TooBigToFitUnderBridge=true
+TechLevel=3
+Sight=6
+CrateGoodie=no
+Points=25
+ROT=11
+TurretROT=10
+IsSelectableCombatant=yes
+Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60
+Locomotor={4A582741-9839-11d1-B709-00A024DDAFD1}
+MovementZone=Normal
+VoiceSelect=GenAllVehicleSelect
+VoiceMove=GenAllVehicleMove
+VoiceAttack=GenAllVehicleAttackCommand
+DieSound=GenVehicleDie
+CrushSound=TankCrush
+DeploySound=BuratinoSwitch
+DamageSound=VehicleDamagedHeavy
+MaxDebris=2
+AIBuildThis=no
+AllowedToStartInMultiplayer=no
+ThreatPosed=15
+DamageParticleSystems=SparkSys,SmallGreySSys
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER,FASTER
+ImmuneToVeins=yes
+Size=1
+OpportunityFire=no
+Weight=2
+IFVMode=1
+CanBeReversed=no
+EMP.Threshold=no
 
-[TargetPainterSpecial]
-Range=8
-RechargeTime=0.1
-SW.AlwaysGranted=yes
-Money.Amount=0
-SW.AllowAI=no
-
-[TargetPainterWH]
-CellSpread=8
-Versus.f_light=1%
-Versus.f_shad=1%
-Versus.f_seizer=1%
-Versus.f_jet=1%
-Versus.f_medium=1%
-Versus.f_gotter=1%
-Versus.f_heavy=1%
-Versus.f_dybb=1%
-Versus.f_spawn=1%
-Versus.f_shrike=1%
-Versus.f_widow=1%
-Versus.f_thor=1%
-Versus.f_quetz=1%
-Versus.f_harb=1%
-Versus.f_cryoc=1%
-Versus.f_hurr=1%
-Versus.f_diver=1%
-Versus.f_mothra=1%
-Versus.f_rock=1%
-Versus.f_hero=1%
-AttachEffect.Animation=TARGETPAINT
-AttachEffect.Duration=900
-AttachEffect.ArmorMultiplier=0.5
+[TENGUF]
+UIName=Name:TENGUS
+Name=Rocketeer
+Image=MECHA
+Category=AirPower
+DeployFire=yes
+DeployToLand=yes
+JumpJet=yes
+IsSimpleDeployer=yes
+Convert.Deploy=TENGUS
+Cursor.Deploy=ModeI
+Primary=NeutralizerCutter
+ElitePrimary=NeutralizerCutter
+Strength=125
+Fearless=yes
+Armor=medium
+TechLevel=11
+Sight=8
+Pip=white
+Speed=10
+AllowedToStartInMultiplayer=no
+Cost=0
+Soylent=225
+Bounty.Value=100
+Bounty=yes
+Bounty.Display=yes
+Points=15
+AirRangeBonus=1
+IsSelectableCombatant=yes
+VoiceSelect=
+VoiceMove=
+VoiceAttack=
+VoiceFeedback=
+VoiceSpecialAttack=
+CrashingSound=
+ImpactLandSound=
+Locomotor={92612C46-F71F-11d1-AC9F-006008055BB5}
+MovementZone=Fly
+SpeedType=Hover
+HoverAttack=yes
+BalloonHover=yes
+ConsideredAircraft=yes
+ThreatPosed=15
+PhysicalSize=1
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER,FASTER
+JumpjetSpeed=34
+JumpjetClimb=24
+JumpjetCrash=25
+JumpJetAccel=10
+JumpjetTurnRate=20
+JumpjetHeight=500
+JumpjetWobbles=.01
+JumpjetDeviation=1
+JumpjetNoWobbles=yes
+Size=1
+Crashable=no
+MoveSound=RocketeerMoveLoop
+PixelSelectionBracketDelta=-3
+CanBeReversed=no
+ImmuneToEMP=no
 
