--- a/INI/Map Code/Tweak Module/zephyrobot.ini
+++ b/INI/Map Code/Tweak Module/zephyrobot.ini
@@ -37,6 +37,11 @@ ROF=20
 [HowitzerBeaconE]
 ROF=20
 
+[ZTARGET]
+CivilianEnemy=yes
+Primary=FakeEye
+ThreatPosed=20
+
 [HowitzerProjInacc]
 Proximity=no
 AA=no
