--- a/INI/Map Code/base code.ini
+++ b/INI/Map Code/base code.ini
@@ -29,7 +29,7 @@ IsPowered=no
 RechargeTime=0.01
 Type=UnitDelivery
 Action=Custom
-SidebarPCX=apocicon.pcx.pcx
+SidebarPCX=apocicon.pcx
 ShowTimer=no
 DisableableFromShell=no
 Range=1.5
