--- a/INI/Map Code/Tweak Module/force shield.ini
+++ b/INI/Map Code/Tweak Module/force shield.ini
@@ -1,9 +1,186 @@
 ; Force Shield Enhanced
-;-demo:[ForceShieldSpecial]SW.AlwaysGranted=yes
-;-demo:[ForceShieldSpecial]RechargeTime=0.1
-;-demo:[ForceShieldSpecial]SW.AllowAI=no
+;;-demo:[SuperForceShieldSpecial]SW.AlwaysGranted=yes
+;;-demo:[SuperForceShieldSpecial]RechargeTime=0.1
+;;-demo:[SuperForceShieldSpecial]SW.AllowAI=no
 
-[ForceShieldSpecial]
+
+[SuperWeaponTypes]
+39283=UltraShieldSpecial
+27912=SuperForceShieldSpecial
+
+[SuperForceShieldSpecial]
+UIName=NAME:GearChange
+Name=Elite Reserves
+IsPowered=true
 RechargeTime=3
-SW.Range=10,10
-Range=10
+Money.Amount=0
+Type=UnitDelivery
+Action=Custom
+ShowTimer=no
+SidebarPCX=forcicon.pcx
+DisableableFromShell=no
+Range=0
+EVA.Ready=EVA_BattlePowerReady
+SW.UseAITargeting=yes
+SW.AITargeting=Self
+SW.CreateRadarEvent=no
+SW.ActivationSound=ReservesStart
+SW.Deferment=0
+Deliver.Types=F_G
+FlashSidebarTabFrames=0
+Text.Ready=NAME:ACTIVATE
+
+
+[UltraShieldSpecial]
+UIName=Name:ForceShield
+Name=Force Shield
+IsPowered=true
+RechargeTime=0.1
+Type=ForceShield
+Action=ForceShield
+SidebarPCX=forcicon.pcx
+SW.ShowCameo=false
+ShowTimer=no
+DisableableFromShell=no
+SpecialSound=ForceShieldFading
+StartSound=ForceShieldStarting
+FlashSidebarTabFrames=0
+Range=4
+SW.Range=50,50
+LineMultiplier=1
+SW.FireIntoShroud=no
+SW.RequiresTarget=all
+SW.UseAITargeting=true
+SW.AffectsHouse=team
+SW.AutoFire=yes
+SW.ManualFire=no
+SW.Animation=none
+SW.AITargeting=self
+Protect.Duration=180
+Protect.PowerOutage=0
+Protect.PlayFadeSoundTime=75
+EVA.Ready=none
+SW.CreateRadarEvent=no
+SW.Inhibitors=none
+Cursor=Force
+NoCursor=NoForce
+SW.InitialReady=yes
+SW.VirtualCharge=yes
+
+[BuildingTypes]
+32340=F_G
+
+[F_G]
+Image=FAKEKILL
+DeployFacing=2
+BuildupTime=.01
+IsPassable=no
+UIName=Name:DUMMYDUMMY
+Name=Fake Elite Reserves (Do Not Use)
+SuperWeapon=UltraShieldSpecial
+BuildCat=Combat
+Strength=600
+Armor=killself
+TechLevel=11
+Adjacent=0
+Sight=0
+Owner=PsiCorps
+IronCurtain.Modifier=0
+ForceShield.Modifier=0
+AIBuildThis=no
+Points=0
+Power=0
+Crewed=no
+Capturable=false
+Overpowerable=false
+Explosion=DUMMY
+Turret=no
+MaxDebris=0
+MinDebris=0
+ThreatPosed=0
+Unsellable=yes
+Powered=false
+BaseNormal=no
+ClickRepairable=no
+Repairable=no
+ImmuneToPsionics=yes
+BuildingDieSound=Dummy
+Drainable=no
+Trainable=no
+HasRadialIndicator=true
+Selectable=no
+Insignia.Veteran=dummy
+Insignia.Elite=dummy
+Insignificant=yes
+Chronoshift.Allow=no
+Primary=NotARod
+Secondary=ShieldEffect
+AttackCursorOnFriendlies=yes
+AttackFriendlies=yes
+NoManualFire=yes
+
+[WeaponTypes]
+12399=ShieldEffect
+12400=ShieldEffectReal
+[Projectiles]
+15458=ShieldEffectP
+[Warheads]
+12832=ShieldEffectWH
+
+[ShieldEffect]
+Damage=0
+Range=512
+ROF=100
+Projectile=ShieldEffectP
+Speed=1
+Warhead=TargetAllCaster
+AreaFire=yes
+DecloakToFire=no
+RevealOnFire=no
+
+[ShieldEffectP]
+Shadow=no
+AA=no
+AG=yes
+Ranged=no
+Proximity=no
+Image=FAKEP
+ROT=100
+Dropping=yes
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+Acceleration=100
+Airburst=yes
+AirburstWeapon=ShieldEffectReal
+DetonationAltitude=50000
+CourseLockDuration=1
+Cluster=1
+AirburstSpread=0.5
+AroundTarget=no
+
+[ShieldEffectReal]
+Damage=0
+Range=512
+ROF=100
+Projectile=InvisibleAll
+Speed=1
+Warhead=ShieldEffectWH
+AreaFire=yes
+Anim=PLSM
+DecloakToFire=no
+RevealOnFire=no
+
+[ShieldEffectWH]
+Verses=0%,0%,0%,0%,0%,0%,0%,0%,0%,0%,0%
+Versus.wood_b=10%
+Versus.steel_b=10%
+Versus.concrete_b=10%
+InfDeath=0
+CellSpread=25
+PercentAtMax=1
+AffectsEnemies=no
+AffectsAllies=yes
+AttachEffect.Duration=300
+AttachEffect.Animation=FORCSHLD
+AttachEffect.PenetratesIronCurtain=yes
